--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name=".PusherApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_dessert_pusher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_dessert_pusher_round"
         android:supportsRtl="true"
